[gd_scene load_steps=17 format=3 uid="uid://cgpy6k3fxdcna"]

[ext_resource type="Script" path="res://entities/Player/Player.gd" id="1_tqwxo"]
[ext_resource type="Texture2D" uid="uid://ctlrp2j2oi8ko" path="res://assets/shared/scribbledae_all_enhanced_bo.png" id="2_65xhj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2cr8x"]
radius = 6.0
height = 28.0

[sub_resource type="AtlasTexture" id="AtlasTexture_u24lt"]
atlas = ExtResource("2_65xhj")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q888g"]
atlas = ExtResource("2_65xhj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dcla"]
atlas = ExtResource("2_65xhj")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaxjd"]
atlas = ExtResource("2_65xhj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrdcm"]
atlas = ExtResource("2_65xhj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6usv"]
atlas = ExtResource("2_65xhj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l8dm"]
atlas = ExtResource("2_65xhj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aes47"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u24lt")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q888g")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dcla")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaxjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrdcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6usv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l8dm")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28sox"]
size = Vector2(24, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0w5v"]
size = Vector2(22, 2)

[sub_resource type="Animation" id="Animation_p3o2i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5pnmd"]
resource_name = "hurt"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qw7wr"]
_data = {
"RESET": SubResource("Animation_p3o2i"),
"hurt": SubResource("Animation_5pnmd")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_tqwxo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2cr8x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_aes47")
animation = &"walk"
frame_progress = 0.0220923

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, 7)
collision_mask = 5
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_28sox")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 5
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_u0w5v")

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qw7wr")
}

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
